# speech-ai-project

./: .gitignore  PROJECT_DETAILS.md  README.md  app.py  check_onnx.py  copy_assets.py  pyproject.toml
SpeechAIApp/: .gitignore  settings.gradle.kts
SpeechAIApp/app/: build.gradle.kts
SpeechAIApp/app/src/androidTest/java/com/example/speechaiapp/ui/main/: MainScreenTest.kt
SpeechAIApp/app/src/main/: AndroidManifest.xml
SpeechAIApp/app/src/main/java/com/example/speechaiapp/: MainActivity.kt  Navigation.kt  NavigationKeys.kt
SpeechAIApp/app/src/main/java/com/example/speechaiapp/asr/: AudioRecorder.kt  BanglaSpeechModel.kt
SpeechAIApp/app/src/main/java/com/example/speechaiapp/data/: DataRepository.kt
SpeechAIApp/app/src/main/java/com/example/speechaiapp/theme/: Color.kt  Theme.kt  Type.kt
SpeechAIApp/app/src/main/java/com/example/speechaiapp/ui/main/: MainScreen.kt  MainScreenViewModel.kt
SpeechAIApp/app/src/main/res/values/: strings.xml  themes.xml
SpeechAIApp/app/src/test/java/com/example/speechaiapp/ui/main/: MainScreenViewModelTest.kt
static/: app.js  index.html  style.css
